--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -4,6 +4,23 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <h1>Nothing there!</h1>
+            <% if (orders.lenght <=0 ) {%>
+                <h1>Nothing there!</h1>
+            <% } else {%>
+                <ul>
+                    <% orders.forEach(order => { %>
+                        <li>
+                            <h1># <%= order.id %></h1>
+                            <url>
+                                <% order.products.forEach(product => { %>
+                                    <li>
+                                        <%= product.title %> (<%= product.orderItem.quantity %>)
+                                    </li>
+                                <% }); %>
+                            </url>
+                        </li>
+                    <% }); %>
+                </ul>
+            <% } %>
         </main>
         <%- include('../includes/end.ejs') %>
