--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -10,11 +10,11 @@
                 <ul>
                     <% orders.forEach(order => { %>
                         <li>
-                            <h1># <%= order.id %></h1>
+                            <h1># <%= order._id %></h1>
                             <url>
-                                <% order.products.forEach(product => { %>
+                                <% order.items.forEach(product => { %>
                                     <li>
-                                        <%= product.title %> (<%= product.orderItem.quantity %>)
+                                        <%= product.title %> (<%= product.quantity %>)
                                     </li>
                                 <% }); %>
                             </url>
