--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -1,23 +1,22 @@
 <%- include('../includes/head.ejs') %>
+    <link rel="stylesheet" href="/css/orders.css">
     </head>
 
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
-            <% if (orders.lenght <=0 ) {%>
+            <% if (orders.length <= 0) { %>
                 <h1>Nothing there!</h1>
-            <% } else {%>
-                <ul>
+            <% } else { %>
+                <ul class="orders">
                     <% orders.forEach(order => { %>
-                        <li>
-                            <h1># <%= order._id %></h1>
-                            <url>
-                                <% order.items.forEach(product => { %>
-                                    <li>
-                                        <%= product.title %> (<%= product.quantity %>)
-                                    </li>
+                        <li class="orders__item">
+                            <h1>Order - # <%= order._id %></h1>
+                            <ul class="orders__products">
+                                <% order.products.forEach(p => { %>
+                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
                                 <% }); %>
-                            </url>
+                            </ul>
                         </li>
                     <% }); %>
                 </ul>
