--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -10,17 +10,22 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--errror"><%= errorMessage %></div>
         <% } %>
-        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
+        <form class="product-form" action="/admin/<% if (editing) { %>edit-product<% } else { %>add-product<% } %>" method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : '' %>" 
                     type="text" name="title" id="title" value="<% if (editing || hasError) { %><%= product.title %><% } %>">
             </div>
             <div class="form-control">
+                <label for="image">Image</label>
+                <input class="<%= validationErrors.find(e => e.param === 'image') ? 'invalid' : '' %>" 
+                    type="file" name="image" id="image">
+            </div>
+            <!--<div class="form-control">
                 <label for="imageUrl">Image URL</label>
                 <input class="<%= validationErrors.find(e => e.param === 'imageUrl') ? 'invalid' : '' %>" 
                     type="text" name="imageUrl" id="imageUrl" value="<% if (editing || hasError) { %><%= product.imageUrl %><% } %>">
-            </div>
+            </div>-->
             <div class="form-control">
                 <label for="price">Price</label>
                 <input class="<%= validationErrors.find(e => e.param === 'price') ? 'invalid' : '' %>" 
